--- a/projects.html
+++ b/projects.html
@@ -356,10 +356,24 @@
       <nav class="css-mobile-menu" role="navigation">
         <div id="menuToggle">
           <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="span"></span>
+          <span class="span"></span>
+          <span class="span"></span>
           <ul id="menu">
+            <!-- <li class="has-submenu">
+              <a
+                href="javascript:void(0);"
+                class="submenu-toggle"
+                onclick="toggleSubmenu(this)"
+              >
+                <span class="submenu-icon">+</span>Projects
+              </a>
+              <ul class="submenu">
+                <li><a href="/architecture.html">Architecture</a></li>
+                <li><a href="/index.html">Interior</a></li>
+                <li><a href="/products.html">Products</a></li>
+              </ul>
+            </li> -->
             <li><a href="/index.html">Projects</a></li>
             <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
