--- a/architecture.html
+++ b/architecture.html
@@ -376,7 +376,7 @@
           <div class="topNav">
             <span><a href="#" class="activeNav">Architecture</a></span>
             <span><a href="/index.html">Interior</a></span>
-            <span><a href="/products.html">Products</a></span>
+            <!-- <span><a href="/products.html">Products</a></span> -->
             <!-- <span>Nav1</span>
             <span>Nav1</span> -->
           </div>
@@ -394,7 +394,7 @@
           <span class="span"></span>
           <span class="span"></span>
           <ul id="menu">
-            <li class="has-submenu">
+            <!-- <li class="has-submenu">
               <a
                 href="javascript:void(0);"
                 class="submenu-toggle"
@@ -407,7 +407,8 @@
                 <li><a href="/index.html">Interior</a></li>
                 <li><a href="/products.html">Products</a></li>
               </ul>
-            </li>
+            </li> -->
+            <li><a href="/index.html">Projects</a></li>
             <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
