--- a/products.html
+++ b/products.html
@@ -494,7 +494,7 @@
           <span class="span"></span>
           <span class="span"></span>
           <ul id="menu">
-            <li class="has-submenu">
+            <!-- <li class="has-submenu">
               <a
                 href="javascript:void(0);"
                 class="submenu-toggle"
@@ -507,7 +507,8 @@
                 <li><a href="/index.html">Interior</a></li>
                 <li><a href="/products.html">Products</a></li>
               </ul>
-            </li>
+            </li> -->
+            <li><a href="/index.html">Projects</a></li>
             <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
