--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
       </nav>
       <div class="contentWrapper">
         <div class="container">
-          <div class="gridContainer scroll-container">
+          <div class="gridContainer scroll-container" data-scroll-container>
             <div class="projectsGrid">
               <div class="projectItem">
                 <div class="firstSection">
@@ -3585,6 +3585,8 @@
         hyphens: auto;
         line-height: 1.6;
         widows: 2;
+        word-break: break-word;
+        overflow-wrap: break-word;
       }
 
       .ss-carousel__description > p,
