--- a/news-events.html
+++ b/news-events.html
@@ -361,7 +361,7 @@
               </ul>
             </li> -->
             <li><a href="/index.html">Projects</a></li>
-            <li><a href="/news.html">News</a></li>
+            <li><a href="/news-events.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
             <li><a href="/careers.html">Careers</a></li>
