--- a/news-events.html
+++ b/news-events.html
@@ -396,6 +396,14 @@
                 color: #000;
                 text-decoration: none;
               }
+              .newsCategories li:hover {
+                background-color: #000;
+                border: 1px solid #000;
+              }
+              .newsCategories li:hover a {
+                color: #fff;
+                background-color: #000;
+              }
               .newsCategories li.active {
                 padding: 10px 20px;
                 border: 1px solid #000;
