--- a/products.html
+++ b/products.html
@@ -510,7 +510,7 @@
             </li> -->
             <li><a href="/index.html">Projects</a></li>
             <li><a href="/news-events.html">News</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about-us.html">About</a></li>
             <li><a href="#">People</a></li>
             <li><a href="/careers.html">Careers</a></li>
 
