--- a/about-us.html
+++ b/about-us.html
@@ -750,6 +750,33 @@
                 </div>
               </div>
             </section>
+            <section class="section">
+              <div class="row borderBottom parallax-section">
+                <div class="col4">
+                  <h2 class="sectionTitle">
+                    EyeCatch Architects Honored at FOAID 2024
+                  </h2>
+                </div>
+                <div class="col8">
+                  <p>
+                    EyeCatch Architects has secured second place in the
+                    prestigious Festival of Architecture and Interior Designing
+                    (FOAID) competition. Held annually in both Delhi and Mumbai,
+                    FOAID is a nationwide event that celebrates innovation and
+                    excellence in the fields of architecture and interior
+                    design.
+                  </p>
+                  <p>
+                    EyeCatch Architects stood out in the highly competitive
+                    Conceptual Architecture category. Our Chief Architect,
+                    Pranay Mithilesh Pulipati, proudly received the award during
+                    the ceremony held in Delhi. This recognition is a
+                    significant milestone for EyeCatch Architects and an honor
+                    for the Telugu architectural community.
+                  </p>
+                </div>
+              </div>
+            </section>
 
             <section class="services">
               <div class="sectionHead parallax-section">
