--- a/careers.html
+++ b/careers.html
@@ -341,34 +341,24 @@
       <div class="contentWrapper scroll-container">
         <div class="container">
           <div class="pageTitle"><h1>Careers</h1></div>
-          <div class="content grid2">
+          <div class="content">
             <section>
               <p>
-                Our architectural division specializes in designing functional
-                and visually stunning spaces. Whether for commercial buildings,
-                residential projects, or public spaces, EyeCatch Architects
-                combines architectural expertise with artistic and aesthetic
-                vision to bring each project to life. We specialize in the
-                design and execution of both interiors and exteriors of retail
-                spaces from bare cell to complete showrooms and villas. We
-                believe in the power of visual storytelling. Our goal is to
-                create experiences that captivate target audiences and leave a
-                lasting impression.
-              </p>
-            </section>
-            <section>
-              <p>
-                Our philosophy centers on innovation, creativity, and meticulous
-                attention to detail, ensuring that every project exceeds
-                expectations. From conceptualization to execution, we uphold the
-                highest standards of quality and professionalism. Our
-                collaborative approach ensures each client receives personalized
-                attention and solutions tailored to their specific needs. We are
-                an ensemble of storytellers, innovators, and creators of
-                immersive experiences. With a passion for artistry and a
-                commitment to excellence, we look forward to partnering with you
-                on your next project. Choose us for unparalleled creativity and
-                visionary design solutions.
+                Our journey began in 1991 when we founded an advertising agency
+                in Vijayawada named EyeCatch. We quickly established ourselves
+                as a leading agency in the fields of advertisement and branding,
+                earning a distinguished reputation in record time. In 2010, we
+                transformed our agency into a private limited company named
+                Medha Aesthetics Pvt. Ltd. Over three decades, we have
+                specialized in branding, architecture, and furniture design,
+                showcasing our innovative approach to visual communication and
+                aesthetics under the guidance of a smart and creative board of
+                directors and top-level leadership. We believe in the power of
+                visual storytelling. We strive to create experiences that
+                captivate target audiences and leave a lasting impression. Our
+                philosophy revolves around innovation, creativity, and attention
+                to detail, ensuring that every project we undertake exceeds
+                expectations.
               </p>
             </section>
           </div>
