--- a/about-us.html
+++ b/about-us.html
@@ -392,6 +392,9 @@
           margin: 90px auto 450px auto;
           max-width: 80%;
         }
+        .contentAbt p {
+          text-align: justify;
+        }
         .heroVideo {
           height: calc(100vh - 81px);
           margin-top: 81px;
