--- a/news-events.html
+++ b/news-events.html
@@ -513,6 +513,21 @@
               .cardBody p {
                 text-align: justify;
               }
+              @media all and (max-width: 768px) {
+                .content {
+                  max-width: 96%;
+                }
+                .newsCategories {
+                  gap: 10px;
+                }
+                .newsCategories li {
+                  padding: 6px 15px;
+                }
+                .newsContainer {
+                  width: 100%;
+                  margin: 0 auto 50px auto;
+                }
+              }
             </style>
             <div class="newsContainer">
               <div class="newsTabs">
