--- a/about-us.html
+++ b/about-us.html
@@ -218,7 +218,6 @@
       .content p {
         font-size: 16px;
         line-height: 24px;
-        text-align: justify;
       }
       .philosophy {
         margin: 0;
@@ -318,6 +317,22 @@
         .css-mobile-menu #menuToggle {
           padding-right: 1rem;
         }
+
+        .footer {
+          padding: 50px 0 100px 0;
+          font-size: 12px;
+          display: flex;
+          justify-content: flex-start;
+          gap: 0;
+          margin-bottom: 100px;
+          flex-wrap: wrap;
+        }
+        .footer-section {
+          margin: 10px 0;
+          position: relative;
+          min-width: 20%;
+          width: 25%;
+        }
       }
     </style>
   </head>
@@ -393,7 +408,6 @@
           max-width: 80%;
         }
         .contentAbt p {
-          text-align: justify;
         }
         .heroVideo {
           height: calc(100vh - 81px);
