--- a/news-events.html
+++ b/news-events.html
@@ -301,6 +301,22 @@
         .css-mobile-menu #menuToggle {
           padding-right: 1rem;
         }
+
+        .footer {
+          padding: 50px 0 100px 0;
+          font-size: 12px;
+          display: flex;
+          justify-content: flex-start;
+          gap: 0;
+          margin-bottom: 100px;
+          flex-wrap: wrap;
+        }
+        .footer-section {
+          margin: 10px 0;
+          position: relative;
+          min-width: 20%;
+          width: 25%;
+        }
       }
     </style>
   </head>
@@ -511,7 +527,6 @@
                 height: auto;
               }
               .cardBody p {
-                text-align: justify;
               }
               @media all and (max-width: 768px) {
                 .content {
