--- a/about-us.html
+++ b/about-us.html
@@ -618,15 +618,15 @@
                 <div class="col8">
                   <p>
                     We are committed to excellence in every aspect of our work.
-                    From conceptualization to execution, Medha Aesthetics
+                    From conceptualization to execution, Eyecatch Architects
                     upholds the highest standards of quality and
                     professionalism. Our collaborative approach ensures that
                     each client receives personalized attention and solutions
-                    tailored to their specific needs. At Medha Aesthetics, we
+                    tailored to their specific needs. At Eyecatch Architects, we
                     are storytellers, innovators, and creators of immersive
                     experiences. With a passion for artistry and a commitment to
                     excellence, we look forward to partnering with you on your
-                    next project. Choose Medha Aesthetics for unparalleled
+                    next project. Choose Eyecatch Architects for unparalleled
                     creativity and visionary design solutions.
                   </p>
                   <div class="spacer50"></div>
@@ -754,7 +754,7 @@
             </section>
             <section class="services">
               <div class="sectionHead parallax-section">
-                <h2>Our Services</h2>
+                <h2>Our Verticals</h2>
               </div>
               <div class="rowG50 borderBottom">
                 <div class="col4 parallax-section">
@@ -805,6 +805,9 @@
               </div>
             </section>
             <section class="section">
+              <div class="sectionHead parallax-section">
+                <h2>Awards</h2>
+              </div>
               <div class="row borderBottom parallax-section">
                 <div class="col4">
                   <h2 class="sectionTitle">
