--- a/about-us.html
+++ b/about-us.html
@@ -412,11 +412,14 @@
         .heroVideo {
           height: calc(100vh - 81px);
           margin-top: 81px;
-          overflow: hidden;
+          /* overflow: hidden; */
           box-sizing: border-box;
+          text-align: center;
+          /* background-color: #000; */
         }
         .heroVideo video {
-          width: 100%;
+          width: auto;
+          height: 100%;
         }
         .sectionTitle {
           font-size: 2.5rem;
@@ -601,10 +604,10 @@
               muted
               autoplay
               loop
-              poster="https://videocdn.cdnpk.net/videos/c5965fd3-a855-5b2c-9591-802eaeb8ad1e/horizontal/thumbnails/large.jpg?uid=R8701124&amp;ga=GA1.1.348108491.1741881562&amp;item_id=4207304"
+              poster="images/poster.jpg"
             >
               <source
-                src="https://videocdn.cdnpk.net/videos/c5965fd3-a855-5b2c-9591-802eaeb8ad1e/horizontal/previews/watermarked/large.mp4"
+                src="images/Eyecatch Architects Logo Animation.mp4"
                 type="video/mp4"
               />
             </video>
@@ -727,7 +730,7 @@
               </div>
               <div class="row parallax-section">
                 <div class="col12">
-                  <img src="https://placehold.co/1200x500" class="w100" />
+                  <img src="images/Eyecatch-team.jpg" class="w100" />
                 </div>
               </div>
               <div class="spacer50"></div>
